--- a/index.rmd
+++ b/index.rmd
@@ -37,36 +37,7 @@ options(knitr.graphics.auto_pdf = TRUE) ## if latex .pdf files will replace .png
 ## options(knitr.table.format = "markdown") # for kable tables
 options(knitr.kable.NA = '')
 
-## packages
-pacman::p_load(tidyverse,
-               ggplot2,
-               kableExtra,
-               rsvg,
-               svglite,
-               data.table)
-
-## detach(package:plyr) ## to avoid conflict w dplyr
-
-## themes
-source('../functions/theme_polar.r')
-
-## Functions
-makestack <- function(x){
-    paste("\\makecell[lt]{", gsub(",", " \\\\\\\\ ", x), "}") ## replace commas with four backslashes
-}
-
-source('../functions/fix.names.R')
-source('../functions/query_label.r')
-source('../functions/labelThis.r')
-source('../functions/query.abbrev.r')
-## source('../functions/make_rows.r')
-source('../functions/make_namedlist.r')
-source('../functions/fix_pval.r')
-
-## varnames
-source('varnames.r')
-source('abbreviations.r')
-
+source('load_functions.r')
 
 ```
 
