--- a/bipolar.rmd
+++ b/bipolar.rmd
@@ -52,7 +52,7 @@ _Heritabiliteten_ (förekomst som ej förklaras av slumpen) är ca 70 % (BPI ~ B
 
 Mani återkommer hos 90 %. Depression är den främsta sjukdomsbördan vid bipolärt syndrom. Kvinnor med bipolär sjukdom har större inslag depression än män. Ca 60-70% av maniska och hypomaniska episoder uppträder i anslutning till (före eller efter) en depressiv episod. Längre tid till start av behandling förknippat med sämre prognos [@Vieta2018;@Goodwin2007]. Högre antal episoder är förknippat med längre duration av- och svårare efterföljande episoder [@Yatham2018]. Över livstiden får vissa progress av sjukdomen minskande intervall mellan episoder och minskande behandlingsrespons [@Goodwin2007]. Upprepade skov är hos en subgrupp förknippat med progress i form av minskad volym grå hjärnsubstans, tilltagande kognitiva besvär, mer residualsymtom mellan episoder, svårare skov, minskad respons på behandling. Tidig underhålllsbehandling behandling, särskilt när den medför episodfrihet, reverserar kognitiva besvär och hjärnplasticitet  [@Yatham2018].
 
-Nästan alla med BP behöver förebyggande behandling för att minska antal skov, residualsymtom, och återhämta funktionsnivå och livskvalitet. Med behandling får ca 19-25%% ett återfall vaje år, jämfört med 23%­40% för dem med placebobehandling [@Yatham2018].
+Nästan alla med BP behöver förebyggande behandling för att minska antal skov, residualsymtom, och återhämta funktionsnivå och livskvalitet. Med behandling får ca 19-25% ett återfall vaje år, jämfört med 23%-40% för dem med placebobehandling [@Yatham2018].
 
 <!-- Factors associated with overall good prognosis of BD include -->
 <!-- good treatment adherence, lack of early adversity, intermediate age -->
@@ -108,7 +108,7 @@ Subsyndromalt 3 ggr vanligare än syndromalt
 
 ## Diagnostik
 
-Goodwin kritiserar att man i DSM-systemet fokuserar mer på polaritet än förlopp, och att den variant av unipolär depression som är frekvent återkommande därmed inte uppmärksammas (p8). I DSM kommer därför gruppen med "unipolär" depression att vara mer heterogen än tidigare indelningar. Tidigare krävdes för diagnos BP II (och I) mer strikt en affektiv episod med sådan svårighet att den krävde hospitalisering [@Goodwin2007, p8].
+Goodwin kritiserar att man i DSM-systemet fokuserar mer på polaritet än förlopp, och att den variant av unipolär depression som är frekvent återkommande därmed inte uppmärksammas  [@Goodwin2007, p8]. I DSM kommer därför gruppen med "unipolär" depression att vara mer heterogen än tidigare indelningar. Tidigare krävdes för diagnos BP II (och I) mer strikt en affektiv episod med sådan svårighet att den krävde hospitalisering [@Goodwin2007, p8].
 
 ### Diagnostik enligt DSM
 
@@ -199,7 +199,7 @@ Sämningsinkongruenta psykotiska drag: Innehållet överensstämmer ej med episo
 
 #### Med katatoni
 
-Uttalad motorisk störning (ökad, överdriven eller märklig motorisk aktivitet). Individen kan växla mellan minskad- och ökad aktivitet. Kan uppträda vid olika psykiatriska och neurologiska tillstånd samt orsakas av läkemedel.
+Uttalad motorisk störning (minskad, ökad, överdriven eller märklig motorisk aktivitet). Individen kan växla mellan minskad- och ökad aktivitet. Kan uppträda vid olika psykiatriska och neurologiska tillstånd samt orsakas av läkemedel.
 
 Vid bipolär mani eller depression skall symtomen föreligga under större delen av episoden för att specificeras som mani/depression med katatoni.
 
@@ -387,7 +387,7 @@ Personer med frekvent återkommande (en depression per två år) unipolär depre
 - Samsjuklighet
   - Mer normal personlighet vid BP
   - Högre förekomst av samtidigt substansbrukssyndrom
-  - Migrän vanligare vid BP [@Romo-Nava2021]
+  - Migrän vanligare vid BP [@Romo-Nava2021] 
 
 Depressiv episod med blandade drag (se avsnitt \@ref(episode-mixed)) är en riskfaktor för att utveckla BP I eller BPII (Ref: DSM-5).
 
@@ -425,10 +425,11 @@ Har betydelse för differentialdiagnostik, prognos, behandlingsval, utredning oc
   - Ljus och temperatur kan påverka förlopp och uttryck
 - Episodkarakteristika
   - Symtomvariation under dagen
-  - Sömnbesvär, sömntid, dagtrötthet?
+  - Sömnbesvär, sömntid, dagtrötthet
   - Depressiva symtom vid mani (blandade drag?)
   - Maniska symtom vid depression (blandade drag?)
   - Ångest ("with axious distress" ?)
+  - Psykotiska symtom (stämningskongruenta eller icke-)
 - Prodromalsymtom/tidiga varningstecken (kognitiva besvär, sömn, diskreta psykomotoriska förändringar)
 - Utlösande faktorer
   - Nyinsatta läkemedel (kan vara utlösande faktorer)
@@ -446,12 +447,27 @@ Har betydelse för differentialdiagnostik, prognos, behandlingsval, utredning oc
 - Bedöm förutsättningarna för följsamhet till behandlingsplan
 - Psykosocialt nätverk: Betydelse för bla avgörande om inneliggande eller poliklinisk behandling, behov av tät uppföljning
 - Funktionsnedsättning: Stor funktionsnedsättning kan föranleda mer aktiv behandling, evtuell sjukhusvård
+- Provtagning [@Yatham2018]
+  - EKG (QTT)
+  - Thyroideastatus
+  - BMI
+  - Blodstatus
+  - Glukos
+  - Leverstatus
+  - Elektrolytstatus inkl kalcium (hyperparathyroidism vid litiumbehandling)
+  - Urinsticka
+  - Urin-drogscreening
+  - Prolaktin (för uppföljning av antipsykotiska medel)
 
 ### Samsjuklighet
 
 Samsjuklighet/riskbeteenden.
 
 Identifiera komorbiditet: Substansbruk, obesitas, thyroideasjukdom, ångesttillstånd, ätstörning, migrän.
+
+Metabola syndromet vanligt vid BP (prevalens 20-65%). Inbegruper bukfetma, hypertoni, glukosintolerans, diabetes mellitus, dyslipidemi. Är förknippat med sämre prognos avseende bipolära symtom.
+
+Psykiatrisk samsjuklighet är vanligt, ffa ångestsyndrom (hos ca 75%), ADHD, uppförandestörning, substansbrukssyndrom (50% av BPI).
 
 <!-- DSM: Co-occurring mental disorders are common, with the most frequent disorders being any anxiety disorder (e.g., panic attacks, social anxiety disorder [social phobia], specific phobia), occurring in approximately three-fourths of individuals; ADHD, any disruptive, im- pulse-control, or conduct disorder (e.g., intermittent explosive disorder, oppositional defiant disorder, conduct disorder), and any substance use disorder (e.g., alcohol use disorder) occur in over half of individuals with bipolar I disorder. Adults with bipolar I disorder have high rates of serious and/or untreated co-occurring medical conditions.  -->
 
@@ -883,6 +899,9 @@ Underhållsbehandling: Konsensus målkoncentration (dalvärde 12 tim +- 1 tim ef
 
 Engångsdosering till kvällen kan eventuellt öka följsamhet, reducera polyuri och medföra mindre påverkan på njurarna, utan försämrad effektivitet [@Carter2013;@Bowen1991].
 
+<!-- The target serum level for lithium in acute treatment is 0.8-­ -->
+<!-- 1.2 mEq/L (0.4-­0.8 mEq/L in older adults) while in maintenance treatment, serum levels of 0.6-­1 mEq/L may be sufficient  [@Yatham2018]-->
+
  <!-- Studies have shown that once-a-day lithium at night, compared with multiple daily doses, lowers urine volume and other symptoms of the lithium-induced diabetes insipidus-like syndrome  [@Bowen1991]. -->
  
  <!-- Trials examining renal biopsy results also found that multiple daily doses were associated with more pathological changes to the kidneys -->
@@ -903,7 +922,15 @@ Dosering vid mani:
 - Dosen bör höjas så snabbt som möjligt för att uppnå lägsta terapeutiska dos.
 - Måldos vanligen 1000-2000 mg/d (40-60 mg/kg/d). Max 60 mg/kg/d.
 
-<!-- - Valproatnivå ≥110 mkg/mL hos kvinnor eller ≥135 mkg/mL hos män ökar risken för trombocytopeni. -->
+
+Monitorering:
+
+- Tre till fem dagar efter senaste dstitrering, 12 tim efter senaste dos
+- Kontrollera x2 under akut fas
+- Monitorera vid uppföljning varje 3-6 månader
+- Visst stöd för bättre effekt av högre koncentrationer vid akut mani
+- Målkoncentration 350­700 mM/L (50­100 ug/mL) i akut fas [@Yatham2018]
+- Valproatnivå ≥110 mkg/mL hos kvinnor eller ≥135 mkg/mL hos män ökar risken för trombocytopeni.
 
 > Den dagliga dosen ska fastställas och kontrolleras individuellt av den behandlande läkaren. Den rekommenderade initiala dagliga dosen är 750 mg. Dessutom har en startdos på 20 mg valproat per kg kroppsvikt i kliniska studier också visat sig ha en acceptabel säkerhetsprofil. Depotformuleringar kan ges en eller två gånger dagligen. Dosen bör höjas så snabbt som möjligt för att uppnå lägsta terapeutiska dos, som ger önskad klinisk effekt. Den dagliga dosen ska anpassas till det kliniska svaret för att fastställa lägsta effektiva dos för den individuella patienten. Den genomsnittliga dagliga dosen valproat ligger vanligen mellan 1000 mg och 2000 mg. Patienter som får högre dagliga doser än 45 mg/kg kroppsvikt bör följas noggrant. Fortsatt behandling av maniska episoder vid bipolär sjukdom ska anpassas individuellt och lägsta effektiva dos ska användas. [FASS]
 
@@ -911,7 +938,9 @@ Dosering vid mani:
 
 Äldre: En lägre initial dos och långsam upptitrering rekommenderas.
 
-**Karbamazepin**: Faktorer som kan vara förnippade med respons på karbamazepin är anamanes på skalltrauma, samsjuklighet med ångest och substansbrukssyndrom, schizoaffektiv bld med stämningsnkongruenta vanföreställningar, ingen bipolär sjjukdom hos förstagradssläktingar [@Yatham2018].
+**Karbamazepin**: Faktorer som kan vara förnippade med respons på karbamazepin är anamanes på skalltrauma, samsjuklighet med ångest och substansbrukssyndrom, schizoaffektiv bld med stämningsnkongruenta vanföreställningar, ingen bipolär sjukdom hos förstagradssläktingar [@Yatham2018].
+
+- Monitorering av serumnivåer kan göras för att kontrollera följsamhet och undvika toxisk nivå.
 
 **Lamotrigin:** Har FDA-indikation för behandling av bipolär depression. Preventivmedel kan minska lamotriginkoncentrationerna (men ej omvänt).
 
@@ -919,7 +948,9 @@ Dosering vid mani:
 - Trappas upp gradvis för att minska risken för hudutslag.
 - I monoterapi och frånvaro av andra läkemedel som påverkar metabolismen av lamotrigin starta 25 mg/d i två veckor. Uptitrera gradvis till 200 mg enligt FASS.
 
-Vid godartade hudutslag kan läkemedlet stoppas för att sedan återintroduceras med lägre startdos (5-12.5 mg/d, alt 25 mg vad) och långsammare titrering. Godartade utslag karakteriseras av: Som värst inom några dagar och lägger sig efter 10-14 dagar; prickigt, icke-konfluerande, ej ömmande; frånvaro av systemiska symtom (tex feber, lymfadenopati, allmänpåverkan); involverar ej mukösa membran (mun, läppar, ögon), normala labbprover (blodstatus, leverstatus, kreatinin, urinsticka). Utslag som uppträder inom 5 dagar är troligen ej läkemedelsrelaterade  [@Lorberg2009]. 
+Incidensen av allvarliga hudbiverkningar (toxisk epidermal nekrolys och Steven-Johnssons syndrom) är 0.3-1% och lägre (0.02%) vid långsam titrering [@Yatham2018].
+
+Vid godartade hudutslag (uppträder hos 10%) kan läkemedlet stoppas för att sedan återintroduceras med lägre startdos (5-12.5 mg/d, alt 25 mg vad) och långsammare titrering. Godartade utslag karakteriseras av: Som värst inom några dagar och lägger sig efter 10-14 dagar; prickigt, icke-konfluerande, ej ömmande; frånvaro av systemiska symtom (tex feber, lymfadenopati, allmänpåverkan); involverar ej mukösa membran (mun, läppar, ögon), normala labbprover (blodstatus, leverstatus, kreatinin, urinsticka). Utslag som uppträder inom 5 dagar är troligen ej läkemedelsrelaterade  [@Lorberg2009]. 
 
 **Olanzapin:** Olanzapin som tilläggsbehandling har visat likvärdig effekt vid akut mani respektive blandad episod.
 
